# kawalhaji

./: Cargo.toml  Dockerfile  build.rs
src/: app_data.rs  embed.rs  lib.rs  main.rs
src/apps/: mod.rs
src/apps/service_api/: mod.rs
src/apps/service_auth/: mod.rs
src/apps/service_landing/: mod.rs
src/apps/service_laporan/: mod.rs
src/apps/service_thread/: mod.rs
src/tera_lib/: versioning.rs
templates/: auth.html  landing.html  laporan.html  thread.html
