[package]
name = "kawalhaji"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.6.1"
actix-session = { version = "0.9.0", features = [
    "cookie-session",
    "redis-rs-session",
    "redis-rs-tls-session",
    "redis-actor-session",
] }
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
dotenvy = "0.15.7"
rust-embed = { version = "8.3.0", features = ["include-exclude"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tera = "1.19.1"

[build-dependencies]
anyhow = "1.0.81"
vergen = { version = "8.0.0", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.release]
panic = "unwind"  # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
